5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4134/executions/1637_1053.log
== TEST (2019-04-09 10:17:03) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrao = input("Nome do patrao: ")

if (patrao == cervo):
	msg = ("cervo eh patrono do Harry Potter".lower())
else:
	msg = ("nao eh patrono do Harry Potter".lower())
	
print(msg)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if (patrao == cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:17:33) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrao = input("Nome do patrao: ")

if (patrao = cervo):
	msg = ("cervo eh patrono do Harry Potter".lower())
else:
	msg = ("nao eh patrono do Harry Potter".lower())
	
print(msg)	
-- ERROR:
File "XXXX", line 7
    if (patrao = cervo):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:17:37) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrao = input("Nome do patrao: ")

if (patrao == cervo):
	msg = ("cervo eh patrono do Harry Potter".lower())
else:
	msg = ("nao eh patrono do Harry Potter".lower())
	
print(msg)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if (patrao == cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:18:28) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrao = input("Nome do patrao: ")

if (patrao == cervo):
	msg = "cervo eh patrono do Harry Potter"
else:
	msg = "nao eh patrono do Harry Potter"
	
print(msg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if (patrao == cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:19:14) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

c = input("Nome do patrao: ")

if (c == "cervo"):
	msg = "cervo eh patrono do Harry Potter"
else:
	msg = "nao eh patrono do Harry Potter"
	
print(msg)
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:19:20) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

c = input("Nome do patrao: ")

if (c == "cervo"):
	msg = "cervo eh patrono do Harry Potter"
else:
	msg = "nao eh patrono do Harry Potter"
	
print(msg)
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:19:27) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

c = input("Nome do patrao: ")

if (c == "cervo"):
	msg = "cervo eh patrono do Harry Potter"
else:
	msg = "nao eh patrono do Harry Potter"
	
print(msg)
-- EXECUTION TIME:
0.201503
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:20:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

c = input("Nome do patrao: ")

if (c == "cervo"):
	msg = ("cervo eh patrono do Harry Potter".lower())
else:
	msg = ("nao eh patrono do Harry Potter".lower())
	
print(msg)
-- OUTPUT:
cervo eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:20:08) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

c = input("Nome do patrao: ")

if (c == "cervo"):
	msg = ("cervo eh patrono do Harry Potter".lower())
else:
	msg = ("nao eh patrono do Harry Potter".lower())
	
print(msg)
-- EXECUTION TIME:
0.223071
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do harry potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
nao eh patrono do harry potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:20:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

c = input("Nome do patrao: ")

if (c == "cervo"):
	msg = ("cervo eh patrono do Harry Potter".lower())
else:
	msg = ("nao eh patrono do Harry Potter".lower())
	
print(msg)
-- OUTPUT:
cervo eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:20:37) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

c = input("Nome do patrao: ")

if (c == "cervo"):
	msg = ("cervo eh patrono do Harry Potter".lower())
else:
	msg = ("nao eh patrono do Harry Potter".lower())
	
print(msg.lower())
-- OUTPUT:
cervo eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:24:14) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

c = input("Nome do patrao: ")

if (c == "cervo"):
	msg = "cervo eh patrono do Harry Potter"
else:
	msg = c + " nao eh patrono do Harry Potter"
	
print(msg.lower())
-- OUTPUT:
cervo eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:24:22) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

c = input("Nome do patrao: ")

if (c == "cervo"):
	msg = "cervo eh patrono do Harry Potter"
else:
	msg = c + " nao eh patrono do Harry Potter"
	
print(msg.lower())
-- EXECUTION TIME:
0.139244
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do harry potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do harry potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:24:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

c = input("Nome do patrao: ")

if (c == "cervo"):
	msg = "cervo eh patrono do Harry Potter"
else:
	msg = c + " " + "nao eh patrono do Harry Potter"
	
print(msg.lower())
-- EXECUTION TIME:
0.1225
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do harry potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do harry potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:24:41) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

c = input("Nome do patrao: ")

if (c == "cervo"):
	msg = "cervo eh patrono do Harry Potter"
else:
	msg = c + " " + "nao eh patrono do Harry Potter"
	
print(msg.lower())
-- OUTPUT:
cervo eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:27:29) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

c = input("Nome do patrao: ")

if (c == "cervo"):
	msg = "cervo eh patrono do Harry Potter"
else:
	msg = c + " " "nao eh patrono do Harry Potter"
	
print(msg0
-- EXECUTION TIME:
0.165455
-- ERROR:
  File "/home/codebench/codes/1637/1053/main.py", line 13
    
              ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:27:33) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

c = input("Nome do patrao: ")

if (c == "cervo"):
	msg = "cervo eh patrono do Harry Potter"
else:
	msg = c + " " "nao eh patrono do Harry Potter"
	
print(msg)
-- EXECUTION TIME:
0.210746
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
Nome do patrao: cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
Nome do patrao: bode nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:28:11) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

c = input("Nome do patrao: ")

if (c == "cervo"):
	msg = "cervo eh patrono do Harry Potter"
else:
	msg = c + " " "nao eh patrono do Harry Potter"
	
print(msg)
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:28:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

c = input("Nome do patrao: ")

if (c == "cervo"):
	msg = "cervo eh patrono do Harry Potter"
else:
	msg = c + " " "nao eh patrono do Harry Potter"
	
print(msg)
-- EXECUTION TIME:
0.165551
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
